added new theme and picture

--- a/Superhero Creator/Superhero Creator.csproj
+++ b/Superhero Creator/Superhero Creator.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -174,9 +176,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201910241611514_InitialMigration.cs" />
-    <Compile Include="Migrations\201910241611514_InitialMigration.Designer.cs">
-      <DependentUpon>201910241611514_InitialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201910251814573_restart.cs" />
+    <Compile Include="Migrations\201910251814573_restart.Designer.cs">
+      <DependentUpon>201910251814573_restart.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -185,12 +187,31 @@
     <Compile Include="Models\Superhero.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="StudentDataModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StudentDataModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="StudentDataModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StudentDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="StudentDataModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StudentDataModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Superhero.cs">
+      <DependentUpon>StudentDataModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\niccage.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -208,6 +229,16 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="StudentDataModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StudentDataModel.edmx</DependentUpon>
+      <LastGenOutput>StudentDataModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="StudentDataModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>StudentDataModel.edmx</DependentUpon>
+      <LastGenOutput>StudentDataModel.cs</LastGenOutput>
+    </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -244,11 +275,20 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Superhero\Create.cshtml" />
     <Content Include="Views\Superhero\Edit.cshtml" />
-    <Content Include="Views\Superhero\Details.cshtml" />
     <Content Include="Views\Superhero\Delete.cshtml" />
+    <EntityDeploy Include="StudentDataModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>StudentDataModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="StudentDataModel.edmx.diagram">
+      <DependentUpon>StudentDataModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="Views\Superhero\Index.cshtml" />
+    <Content Include="Views\Superhero\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -264,8 +304,11 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201910241611514_InitialMigration.resx">
-      <DependentUpon>201910241611514_InitialMigration.cs</DependentUpon>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201910251814573_restart.resx">
+      <DependentUpon>201910251814573_restart.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
